fixed responsive spacing for tweet box

--- a/public/styles/text-tweet.css
+++ b/public/styles/text-tweet.css
@@ -15,11 +15,14 @@
 }
 
 .tweet-box {
-  
   margin: 30px 0px;
   width: 100%;
   height:100%;
   border:5px solid #000;
+}
+
+.name{
+  padding-left: 10px;
 }
 
 .tweet-box:hover {
@@ -33,10 +36,8 @@
 
 .content-left {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  width: 180px;
   height: 100px;
   padding-left: 20px;
 }
@@ -46,7 +47,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  width: 100px;
   height: 100px;
   padding: 1.5em 0em;
   margin-right: 20px;
@@ -68,6 +68,12 @@
 .text{
   margin: 1em ;
   word-wrap: break-word; 
+}
+
+.fas{
+  padding-left: 2px;
+  padding-right: 2px;
+
 }
 
 
